--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/backbook-icon.png" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/831/831366.png" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/icons/backbook-icon.png" /> -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -12,13 +13,13 @@
       name="description"
       content="Backbook helps you connect and share with the people in your life."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/backbook-icon.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/backbook-icon.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       property="og:image"
       content="https://backbook.vercel.app/images/background.webp"
     />
-    <title>Backbook</title>
+    <title>Socialize Pro</title>
   </head>
   <body class="dark">
     <div id="backbook"></div>
